--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -9,7 +9,7 @@ html{
 
 body{
   /* font-family: ; */
-  line-height: 1.7;
+  line-height: 1.85;
   color: black ;
 
 }
@@ -115,16 +115,30 @@ img{
 
 /* MAIN
 -------------------------*/
+main li{
+  list-style-type: none;
+}
 
 /* breadcrumb */
-.breadcrumb{
-  font-size: 0.5rem;
+.breadcrumb,
+.breadcrumb a{
+  display: flex;
+  flex-direction: row;
+  font-size: 0.625rem;
   color: gray;
 }
 
 /* page-title */
-/* .page-title{} */
-.page-title p h1{
+.page-title{
+  max-width: 100%;
+  height: 240px;
+  background-image: url(../images/h1_whats_2.jpg);
+  background-size: cover;
+  margin: 10px 0;
+  padding: 28px 0 0 24px;
+}
+.page-title p,
+.page-title h1{
   color: white;
 }
 
@@ -133,28 +147,54 @@ img{
   margin: 0 auto;
   max-width:600px;
 }
-.main-content h2:before{
-  content: url(../images/square.png)
-
+.main-content h2{
+  background-image: url(../images/square.png);
+  background-size:30px ;
+  background-position: left middle;
+  padding-left:40px ;
+  margin:10px 0 ;  
+}
+.main-content p{
+  margin: 10px 0;
+  font-size: 1rem;
 }
 .main-content img{
   size: cover;
 }
 
+/* pagenation */
+.pagenation{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
 
 /* sub-content */
 .sub-content{
-  background-color: turquoise;
+  background-color: rgb(156, 194, 238);
   padding: 16px;
 }
 .sub-content ul{
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows:repeat(2,1fr);
   gap: 8px;
 }
 .sub-content li{
   border: 1px gray solid;
   background-color: white;
+  text-align: center;
+}
+.sub-content li:hover{
+  background-color: rgb(197, 194, 194);  
+}
+.sub-content li a{
+  display: block;
+  font-weight: bold;
+  padding:10px 5px;
 }
 
 /* sub-menu */
