--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -3,12 +3,11 @@
 /* 共通部分 
 ----------------------*/
 html{
-  font-size: 100%;
+  font-size: 80%;
   background-color: white;
 }
 
 body{
-  /* font-family: ; */
   line-height: 1.85;
   color: black ;
 
@@ -21,11 +20,10 @@ img{
   max-width: 100%;
 }
 
-.wrapper{
+.main-wrapper{
   margin: 0 auto;
-  max-width: 1440px;
+  max-width: 624px;
 }
-
 .share-button,
 .share-button ul{
   display: flex;
@@ -35,17 +33,17 @@ img{
 }
 
 .share-button span{
-  font-size: 0.75rem;
+  font-size: 0.7rem;
 }
 
 .share-button li{
   list-style-type: none;
-  padding: 4px;
+  padding: 20px 8px;
 }
 
 .share-button img{
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 
 /* ボタン */
@@ -68,13 +66,23 @@ img{
   margin-left: 10px;
 }
 
+/* pagenation */
+.pagenation{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  margin: 40px auto;
+}
+
+
 
 /* HEADER 
 ------------------------*/
 
 /* page-header */
 .page-header{
-  margin: 12px 0 16px 16px;
+  margin: 8px 20px 16px 20px;
 }
 .page-header,
 .page-header ul{
@@ -85,12 +93,14 @@ img{
 
 .page-header div{
   min-width: 20%;
-  margin-right: 10%;
+  margin-right: 8%;
 }
 /* main-nav */
 .main-nav li{
   font-weight: bold;
   list-style-type: none;
+  font-size: 0.875rem;
+  margin:auto 10px ;
 }
 .main-nav li:hover{
   color: blue;
@@ -120,6 +130,10 @@ main li{
 }
 
 /* breadcrumb */
+.breadcrumb{
+  margin-left: 5%;
+}
+
 .breadcrumb,
 .breadcrumb a{
   display: flex;
@@ -162,16 +176,6 @@ main li{
   size: cover;
 }
 
-/* pagenation */
-.pagenation{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-
 /* sub-content */
 .sub-content{
   background-color: rgb(156, 194, 238);
@@ -193,14 +197,15 @@ main li{
 }
 .sub-content li a{
   display: block;
-  font-weight: bold;
   padding:10px 5px;
 }
 
 /* sub-menu */
 .sub-menu{
   border-top:2px black solid;
-  padding-bottom: 24px;
+  padding-bottom: 36px;
+  max-width: 960px;
+  margin: 0 auto;
 }
 .sub-menu h2{
   padding: 24px 0;
@@ -230,7 +235,6 @@ footer{
   padding-bottom: 56px;
 }
 
-
 /* follow */
 .follow{
   border-top:2px black solid;
@@ -258,15 +262,16 @@ footer{
 
 /* sitemap */
 .sitemap{
-  border-bottom:1px gray solid;
-  margin-bottom: 48px;
   padding-bottom: 40px;
+  border-bottom:1px gray solid;
 }
 .sitemap-list{
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 30px;
   list-style-type: none;
+  margin: 0 48px auto;
+
 }
 .sitemap-list ul{
   list-style-type: none;
@@ -298,10 +303,9 @@ footer{
   padding:0 24px; 
 }
 footer p{
-  margin-left: 200px;
+  margin-left: auto;
 
 }
-
 
 @media(max-width:600px){
   .main-nav{
