--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -56,7 +56,7 @@ img{
 /* ボタン */
 .button{
   display: block;
-  background-color: blue;
+  background-color: cornflowerblue;
   color: white;
   text-align: center;
   width: 300px;
@@ -89,7 +89,10 @@ img{
 
 /* page-header */
 .page-header{
-  margin: 8px 20px 16px 20px;
+  padding: 8px 20px 16px 20px;
+  width: 100%;
+  background-color: white;
+  position: fixed;
 }
 .page-header,
 .page-header ul{
@@ -106,7 +109,7 @@ img{
 .main-nav li{
   font-weight: bold;
   list-style-type: none;
-  font-size: 0.875rem;
+  font-size: 1rem;
   margin:auto 10px ;
 }
 .main-nav li:hover{
@@ -134,6 +137,9 @@ img{
 -------------------------*/
 main li{
   list-style-type: none;
+}
+main a{
+  color:cornflowerblue;
 }
 
 /* breadcrumb */
@@ -185,7 +191,7 @@ main li{
 
 /* sub-content */
 .sub-content{
-  background-color: rgb(156, 194, 238);
+  background-color: rgb(171, 202, 238);
   padding: 16px;
 }
 .sub-content ul{
