--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -64,9 +64,6 @@ img{
   margin: 56px auto;
   padding: 4px;
 }
-.button:hover{
-  opacity: 0.5;
-}
 .button img{
   width:1rem;
   height:1rem;
@@ -82,10 +79,16 @@ img{
   margin: 40px auto;
 }
 
-/* リンク手前の">" */
+/*:マーカー（">"）設定 */
 .before a:before{
   content: ">　";
   font-size: 0.5rem;
+}
+/* マウスオーバー時のフェード設定 */
+.fade .button:hover,
+.fade li:hover{
+  opacity: 0.7;
+	transition: opacity 0.3s ease;
 }
 
 
@@ -139,9 +142,6 @@ img{
 .sub-nav img{
   width: 40px;
   height:28px;
-}
-.sub-nav img:hover{
-  opacity: 0.5;
 }
 
 /* MAIN
@@ -201,7 +201,7 @@ main a{
 }
 /* sub-content */
 .sub-content{
-  background-color: rgb(171, 202, 238);
+  background-color: rgb(206, 226, 250);
   padding: 16px;
 }
 .sub-content ul{
@@ -215,9 +215,6 @@ main a{
   background-color: white;
   text-align: center;
   padding:16px 20px
-}
-.sub-content li:hover{
-  background-color: rgb(197, 194, 194);  
 }
 .sub-content li a{
   display: flex;
