[update]hover-underlineクラスを追加し、マウスホバー時の下線表示を実装

--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -90,6 +90,10 @@ img{
   opacity: 0.7;
 	transition: opacity 0.3s ease;
 }
+/* マウスオーバー時に下線を表示 */
+.hover-underline a:hover{
+ text-decoration: underline; 
+}
 
 
 /* HEADER 
