[fix]DLボタンの背景色の修正

--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -56,7 +56,7 @@ img{
 /* ボタン */
 .button{
   display: block;
-  background-color: cornflowerblue;
+  background-color:#005bac;
   color: white;
   text-align: center;
   width: 400px;
