[fix]sub-menuクラスのフォントサイズ修正

--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -244,6 +244,7 @@ main li{
   padding-bottom: 36px;
   max-width: 960px;
   margin: 0 auto;
+  font-size: 0.8rem;
 }
 .sub-menu h2{
   padding: 24px 0;
@@ -260,12 +261,6 @@ main li{
 .sub-menu li{
   margin:10px;
   padding:10px;
-}
-
-/* FOOTER 
--------------------------*/
-footer{
-  padding-bottom: 56px;
 }
 
 /* follow */
