--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -9,7 +9,7 @@ html{
 
 body{
   line-height: 1.85;
-  color: black ;
+  color: black;
 
 }
 a{
@@ -292,6 +292,7 @@ main li{
 .sitemap{
   padding-bottom: 40px;
   border-bottom:1px gray solid;
+  font-size: 0.8rem;
 }
 .sitemap-list{
   display: grid;
@@ -299,7 +300,6 @@ main li{
   gap: 30px;
   list-style-type: none;
   margin: 0 48px auto;
-
 }
 .sitemap-list ul{
   list-style-type: none;
@@ -310,6 +310,10 @@ main li{
 .sitemap-list li ul li{
   margin: 20px 0;
 }
+.sitemap-list li ul li h4{
+  font-size: 1rem;
+}
+
 
 /* FOOTER 
 -------------------------*/
