--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -66,15 +66,11 @@ img{
   color: black;
 }
 
-/*:マーカー（">"）設定 */
-main a:before{
+/*:before擬似クラス（">"）設定 */
+/* 対象：mainタグ内に存在するpagenation以外のaタグ */
+main a:not(.pagenation a, .follow a, .share-button a):before{
   content: ">　";
   font-size: 0.5rem;
-}
-.pagenation a:before,
-.follow a:before,
-.share-button a:before{
-  content: none;
 }
 
 /* マウスオーバー時のフェード設定 */
