--- a/nri/style/style.css
+++ b/nri/style/style.css
@@ -95,9 +95,9 @@ img{
 
 /* page-header */
 .page-header{
-  padding: 8px 20px 16px 20px;
+  padding: 20px 24px 12px 24px;
   width: 100%;
-  background-color: white;
+  background-color: #fff;
   position: fixed;
 }
 .page-header,
@@ -105,6 +105,7 @@ img{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .page-header div{
@@ -113,15 +114,15 @@ img{
 }
 /* main-nav */
 .main-nav li{
+  display: block;
   font-weight: bold;
   list-style-type: none;
   font-size: 0.8rem;
   margin:auto 10px ;
-  align-items: center;
 }
-.main-nav li:hover{
-  color: blue;
-  border-bottom:2px  blue solid;
+.main-nav li a:hover{
+  color:#0f4199;
+  border-bottom:2px  #0f4199 solid;
 }
 .main-nav a:before{
   content:none;
