--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -6,7 +6,6 @@
   font: normal normal normal 16px/22px Noto Sans;
   color: #3B3B3B;
   list-style-type: none;
-  padding: 0 0 0 56px;
 }
 .page-header__wrapper {
   padding: 16px 96px;
@@ -22,6 +21,9 @@
   display: flex;
   justify-content: flex-end;
 }
+.page-header__nav-list {
+  padding: 0 0 0 56px;
+}
 .page-header__nav-list--link {
   opacity: 0.7;
   text-decoration: none;
@@ -35,7 +37,6 @@
   font: normal normal normal 18px/24px Noto Sans;
   color: #FFF;
   list-style-type: none;
-  padding: 0 0 0 32px;
 }
 .page-footer__wrapper {
   padding: 120px 224px 39px;
@@ -50,6 +51,9 @@
 .page-footer__nav {
   display: flex;
   justify-content: flex-end;
+}
+.page-footer__nav-list {
+  padding: 0 0 0 32px;
 }
 .page-footer__nav-list--link {
   text-decoration: none;
