--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -163,7 +163,7 @@
 }
 
 .section {
-  color: #3B3B3B;
+  color: #3b3b3b;
   text-align: center;
   padding: 160px 0 80px;
 }
@@ -184,7 +184,7 @@
   padding-bottom: 40px;
 }
 .section__link {
-  color: #3B3B3B;
+  color: #3b3b3b;
   font-size: 18px;
   line-height: 45px;
   font-family: Noto Sans;
@@ -199,6 +199,36 @@
   position: relative;
   top: -2px;
   left: 6px;
+}
+
+.contact {
+  font-family: Noto Sans;
+}
+.contact__form-field {
+  padding: 0 0 24px;
+}
+.contact__form-input {
+  width: 38%;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 16px;
+  text-align: left;
+  font-size: 12px;
+  letter-spacing: 0.6px;
+  padding: 10px 16px;
+}
+.contact__form-input::placeholder {
+  opacity: 0.4;
+}
+.contact__form-btn {
+  background: #d1d1d1 0% 0% no-repeat padding-box;
+  border: none;
+  border-radius: 16px;
+  text-align: center;
+  font-size: 14px;
+  letter-spacing: 1.4px;
+  color: #707070;
+  padding: 7px 60px;
 }
 
 /*# sourceMappingURL=style.css.map */
