--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .page-header {
   width: 100%;
   background-color: white;
@@ -229,6 +230,46 @@
   letter-spacing: 1.4px;
   color: #707070;
   padding: 7px 60px;
+}
+
+.recruit {
+  font-family: Noto Sans;
+}
+.recruit__table {
+  width: 640px;
+  margin: 0 auto;
+  border: 1px solid #707070;
+  border-collapse: collapse;
+  border-radius: 4px;
+}
+.recruit__table-row {
+  border: 1px solid #707070;
+}
+.recruit__table-header {
+  border: 1px solid #707070;
+  background-color: rgba(145, 143, 137, 0.3);
+  width: 22.5%;
+  text-align: center;
+  font: normal normal normal 16px/22px Noto Sans;
+  color: #3B3B3B;
+}
+.recruit__table-data {
+  text-align: left;
+  border: 1px solid #707070;
+  padding: 16px 48px;
+}
+.recruit__table-data--header {
+  font: normal normal normal 16px/24px Noto Sans;
+  padding-bottom: 8px;
+  color: #3B3B3B;
+}
+.recruit__table-data--text {
+  font: normal normal normal 14px/21px Noto Sans;
+  color: #3B3B3B;
+}
+.recruit__table-list {
+  list-style-type: "・";
+  padding-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
