--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -272,4 +272,31 @@
   padding-left: 20px;
 }
 
+.news__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 32px 32px;
+}
+.news__image-wrapper {
+  position: relative;
+  background-color: #000;
+  margin: 0 32px;
+}
+.news__image {
+  height: 320px;
+  width: 320px;
+  opacity: 0.6;
+}
+.news__message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 17px;
+  width: 100%;
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
