--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -201,6 +201,17 @@
   top: -2px;
   left: 6px;
 }
+.section__btn {
+  background: #d1d1d1 0% 0% no-repeat padding-box;
+  border: none;
+  border-radius: 40px;
+  text-align: center;
+  font-size: 18px;
+  font-family: Noto Sans;
+  letter-spacing: 1.8px;
+  color: #707070;
+  padding: 18px 64px;
+}
 
 .contact {
   font-family: Noto Sans;
