--- a/kaguya/sass/_section.scss
+++ b/kaguya/sass/_section.scss
@@ -38,4 +38,16 @@
       left: 6px;
     }
   }
+
+  &__btn {
+    background: #d1d1d1 0% 0% no-repeat padding-box;
+    border: none;
+    border-radius: 40px;
+    text-align: center;
+    font-size: 18px;
+    font-family: Noto Sans;
+    letter-spacing: 1.8px;
+    color: #707070;
+    padding: 18px 64px;
+  }
 }
