--- a/kaguya/sass/_page-header.scss
+++ b/kaguya/sass/_page-header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: white;
 
-  %__nav-list {
+  %__nav-text {
     font: normal normal normal 16px/22px Noto Sans;
     color: #3B3B3B;
     list-style-type: none;
@@ -21,16 +21,20 @@
   }
 
   &__nav {
-    display: flex;
-    justify-content: flex-end;
+    width: 45%;
   }
 
   &__nav-list {
-    @extend %__nav-list;
-    padding: 0 0 0 56px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__nav-text {
+    @extend %__nav-text;
+    // padding: 0 0 0 56px;
 
     &--link {
-      @extend %__nav-list;
+      @extend %__nav-text;
       opacity: 0.7;
       text-decoration: none;  
     }
