--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -69,8 +69,7 @@
   width: 100%;
 }
 .concept__main-visual {
-  background: url("../img/home_top@2x.png") no-repeat center center;
-  background-size: cover;
+  background: url("../img/home_top.png") no-repeat center center;
   height: 744px;
 }
 .concept__main-visual--wrapper {
@@ -121,8 +120,7 @@
   letter-spacing: 0.36px;
 }
 .concept__sub-visual {
-  background: url("../img/concept@2x.png") no-repeat left center;
-  background-size: cover;
+  background: url("../img/concept.png") no-repeat left center;
   margin: 0 28px;
   padding-left: 50%;
   height: 560px;
@@ -312,6 +310,12 @@
   font-size: 17px;
   width: 100%;
   text-align: center;
+}
+
+@media (max-width: 1280px) {
+  .br {
+    display: inline-block;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
